couple of tweaks for the styling on gp cards to get the proper spacing at the bottom of the card, also ensure that the anchor focuses nicely

--- a/src/scss/4_state/layout/cards.scss
+++ b/src/scss/4_state/layout/cards.scss
@@ -22,6 +22,12 @@
 
   // Set some additional properties for search result cards
   &.search-results {
+    a:focus {
+      .card__title {
+        background: inherit;
+      }
+    }
+
     @at-root .search-results--title {
       margin-top: 0;
     }
